updated with FPGA testbed info

--- a/_pages/cerebras.html
+++ b/_pages/cerebras.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES</title>
-	<meta name="description" content="Testbed projects that the programme has supported">
+	<title>Cerebras wafer scale testbed – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Testbed projects that the programme has supported">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="Cerebras wafer scale testbed – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/cerebras.png">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Testbed projects that the programme has supported" />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="Cerebras wafer scale testbed – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/cerebras.png" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/cerebras.html">
 
 
 	<header class="header">
@@ -126,18 +126,18 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="Cerebras wafer scale testbed – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/cerebras.png)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Testbeds</h1>
-		<p>Testbed projects that the programme has supported</p>
+		<h1>Cerebras wafer scale testbed</h1>
+		<p>EPCC, University of Edinburgh</p>
 
 	</div>
 
@@ -149,80 +149,21 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			This project brings a [Cerebras CS-1 Wafer Scale Engine](https://cerebras.net/) system to the UK – the first such system in Europe. This enables performance and usability exploration for UK academic and industrial users. The majority of the system has been funded by the University of Edinburgh, however the support from ExCALIBUR HE&S has allowed for a more general access service to be provided to researchers from across ExCALIBUR and the wider computational science and AI community in the UK.
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+Cerebras Systems have developed the world’s largest processor, the Wafer Scale Engine (WSE), at over 46,000 square millimetres, with 1.2 trillion transistors, 400,000 processor cores, 18 gigabytes of SRAM, and an interconnect between processors capable of moving 100 million billion bits per second. With the WSE at its core, the Cerebras CS-1 system is firmly focussed on neural network training and according to Cerebras the CS-1 provides 3000x more capacity and 10,000x greater bandwidth than the leading competitor.
 
-<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+![Cerebras CS-1](images/cerebras-cs1.png){:style="float: right; width: 350px; height: 430px; padding: 15px;"}
 
-<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+From a software perspective, Cerebras Systems have integrated their hardware into common machine learning frameworks such as TensorFlow and PyTorch2, opening up the potential for easy porting of existing application to the system. They also provide a graph compiler (CGC) and optimised library kernels, to efficiently map applications to the many processors on the WSE and ensure optimal use of the resource.
 
-<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+With potential for extreme performance for a wide range of machine learning training tasks, the Cerebras CS-1 is a very exciting new technology. However, there is currently a lack of user experience and application performance data to assess the suitability of the hardware for actual applications, and the requirements/costs for porting codes to the system. With a software environment that partially resembles standard CPU- and GPU-based systems, and partially resembles FPGA-based systems, with associated placement and routing requirements, it is important to be able evaluate both performance and usability of the CS-1 for end user applications. Such end user applications may also include more traditional numerical applications and this will be an area of exploration on the system.
+
+## Access to the testbed systems
+
+The Excalibur H&ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.
+
+<a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a>
 
 
 
