--- a/fpga.html
+++ b/fpga.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES</title>
-	<meta name="description" content="Testbed projects that the programme has supported">
+	<title>FPGA testbed – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Testbed projects that the programme has supported">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="FPGA testbed – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/epcc-acf.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Testbed projects that the programme has supported" />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="FPGA testbed – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/epcc-acf.jpg" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/fpga">
 
 
 	<header class="header">
@@ -126,18 +126,18 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="FPGA testbed – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/epcc-acf.jpg)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Testbeds</h1>
-		<p>Testbed projects that the programme has supported</p>
+		<h1>FPGA testbed</h1>
+		<p>EPCC, University of Edinburgh with University College London and University of Warwick</p>
 
 	</div>
 
@@ -149,74 +149,19 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			<p>This testbed system, and associated effort for enabling software, is aimed at allowing researchers to port their scientific and data-science applications to Field Programmable Gate Arrays (FPGAs) and explore performance and power advantages such technology provides. Composed of next-generation hardware and software, this will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities.</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+<p>In addition to the testbed hardware itself the project is supported by Research Software Engineer (RSE) effort to develop the software stack to enable easier usage of FPGAs, which will be driven by specific use cases from the Excalibur Design and Development Working Groups and other interested application communities.</p>
+
+<p><img src="images/xilinx-versal.jpg" alt="Xilinx Versal ACAP" style="float: right; width: 430px; height: 430px; padding: 15px;" /></p>
+
+<p>Project partners EPCC, UCL, and Warwick will work in collaboration with FPGA vendor Xilinx, Inc. the leader in adaptive and intelligent computing, to deliver and operate the testbed.</p>
+
+<p>It is their intention that this will be a first step towards building a future community and ecosystem around the role of FPGAs in HPC, data science, AI, and machine learning workloads in the UK. The project will also be running a series of training events and workshops, and developing training material to ensure the system is accessible and usable.</p>
+
+<p>The testbed will be physically based in EPCC’s Advanced Compute Facility, and will be made publicly available. It will form a unique resource within UK academic computing, as a single system that provides access to next-generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx, which includes their revolutionary AI engines; hierarchical memory hardware provision, with high bandwidth (HBM2) and Non-Volatile (NVRAM) memory on some of the hosted hardware, providing a unique resource for software developers and algorithm designers to investigate this emerging field in computing hardware; multiple networking options including a high performance node-level network and direct FPGA to FPGA networking to enable system designers and applications developers to assess the relative merits of both approaches; and multiple families of FPGA, allowing evaluation of a range of technologies by users.</p>
+
+<p>The system will be hosted within an existing, established and modern HPC system which provides sufficient resources to enable developers to quickly and efficiently develop application kernels, synthesise their FPGA bitstreams and test their codes in emulation. Finally, the RSE effort will provide an enabling software stack that should significantly reduce the barrier to entry in utilising FPGAs for scientific and data-science applications.</p>
 
 <h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
 
