--- a/_pages/excalibur.html
+++ b/_pages/excalibur.html
@@ -20,18 +20,18 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES</title>
-	<meta name="description" content="Testbed projects that the programme has supported">
+	<title>ExCALIBUR overview – ExCALIBUR H&ES</title>
+	<meta name="description" content="A brief overview of the ExCALIBUR initiative">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Testbed projects that the programme has supported">
+	<meta name="twitter:title" content="ExCALIBUR overview – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="A brief overview of the ExCALIBUR initiative">
 	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Testbed projects that the programme has supported" />
+	<meta property="og:title" content="ExCALIBUR overview – ExCALIBUR H&ES" />
+	<meta property="og:description" content="A brief overview of the ExCALIBUR initiative" />
 	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
 
 	
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/excalibur.html">
 
 
 	<header class="header">
@@ -126,7 +126,7 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="ExCALIBUR overview – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
@@ -136,8 +136,8 @@
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Testbeds</h1>
-		<p>Testbed projects that the programme has supported</p>
+		<h1>ExCALIBUR overview</h1>
+		<p>A brief overview of the ExCALIBUR initiative</p>
 
 	</div>
 
@@ -149,81 +149,59 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			## Exascale Computing ALgorithms and Infrastructures Benefitting UK Research
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+## ExCALIBUR overview
 
-<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+* £45.7M initiative from the UK government's [Strategic Priorities Fund](https://www.ukri.org/research/themes-and-programmes/strategic-priorities-fund/) (SPF) 
+* Led by the [Met Office](http://metoffice.gov.uk), [UK Research and Innovation](https://www.ukri.org) (UKRI) with the [UK Atomic Energy Authority](https://www.gov.uk/government/organisations/uk-atomic-energy-authority) (UKAEA)
+* The UK’s Exascale programme for the next 5 years (started November 2019)
+* Focus on software and algorithms
+* Funding breakdown:
+    * [EPSRC](http://epsrc.ukri.org) - £22.8M
+    * Met Office / UKAEA - £17.0M
+    * Hardware and Enabling Software (H&ES) - £4.5M
 
-<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+*This website covers the activities of the Hardware and Enabling Software strand of ExCALIBUR.*
 
-<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+## ExCALIBUR planned activities
 
+* Knowledge integration
+* High priority use cases
+* Emerging requirements for HPC algorithms
+* Cross-cutting research 
+* Proof-of-concept hardware (H&ES)
+
+*The Hardware and Enabling Software programme is particularly focussed on novel hardware and software testbeds.*
+
+## ExCALIBUR intended benefits
+
+* Increased science productivity
+* Transformational change in capability
+* Increased skills base of interdisciplinary [Research Software Engineers](https://society-rse.org) (RSEs)
+
+*Each project that ExCALIBUR H&ES supports will embed RSE expertise.*
+
+## ExCALIBUR pillars
+
+* __Separation of Concerns__: the maths of a problem is separate from its implementation
+* __Co-design__: holistic, collaborative system design by mathematicians, domain scientists, computer scientists and industrial partners
+* __Data Science__: new workflows to manage and analyse vast volumes of simulation data 
+* __Investing in People__: interdisciplinary Research Software Engineer (RSE) career development driven by forward-looking scientific software design
+
+## ExCALIBUR briefing webinar
+
+EPSRC's Richard Gunn and ExCALIBUR H&ES joint lead Revd Dr Jeremy Yates presented a [webinar on the ExCALIBUR initiative](https://www.youtube.com/watch?v=h0DtVqGzOaU) as part of the [Archer2 training](https://www.archer2.ac.uk/training/) programme.
+
+<iframe src="https://www.youtube.com/embed/h0DtVqGzOaU" width="640" height="360" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Find out more
+
+Find out more at the [ExCALIBUR website](https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur), hosted by the [Met Office](http://metoffice.gov.uk).
+
+Details of ExCALIBUR working groups are available from UKRI's [Grants on the Web](https://gow.epsrc.ukri.org/NGBOViewPanelROL.aspx?PanelId=1-811FGY&RankingListId=1-816PGO) site.
+
+<a href="https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur" class="button button--large">ExCALIBUR website</a>
 
 
 		</article>
