--- a/_pages/funding.html
+++ b/_pages/funding.html
@@ -20,18 +20,18 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES</title>
-	<meta name="description" content="Testbed projects that the programme has supported">
+	<title>ExCALIBUR H&ES Calls – ExCALIBUR H&ES</title>
+	<meta name="description" content="Funding opportunities for H&amp;ES testbed projects">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Testbed projects that the programme has supported">
+	<meta name="twitter:title" content="ExCALIBUR H&ES Calls – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="Funding opportunities for H&amp;ES testbed projects">
 	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Testbed projects that the programme has supported" />
+	<meta property="og:title" content="ExCALIBUR H&ES Calls – ExCALIBUR H&ES" />
+	<meta property="og:description" content="Funding opportunities for H&amp;ES testbed projects" />
 	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
 
 	
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/funding.html">
 
 
 	<header class="header">
@@ -126,7 +126,7 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="ExCALIBUR H&ES Calls – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
@@ -136,8 +136,8 @@
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Testbeds</h1>
-		<p>Testbed projects that the programme has supported</p>
+		<h1>ExCALIBUR H&ES Calls</h1>
+		<p>Funding opportunities for H&ES testbed projects</p>
 
 	</div>
 
@@ -149,80 +149,44 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			## ExCALIBUR H&ES Open Call - Autumn 2020
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+* As part of the ExCALIBUR initiative, UKRI are investing £4.5m over four years to create and evaluate testbeds for novel pre-Exascale architectures and software systems, in a co-design partnership with HPC vendors and the UK research community.
+* This call for proposals is for the £1m budget allocated for 2021-2022.
+* We expect to fund around 4-5 projects each year.
+* Projects will work closely with ExCALIBUR software working groups supported by UKRI, UKAEA and the Met Office.
 
-<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+## Timeline
 
-<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+| Date                     | Stage                                    |
+|--------------------------|------------------------------------------|
+| __14th September 2020__  | The call formally opens                  |
+| __19th October 2020__    | Final date to submit proposals           |
+|                          | *Proposals will be peer reviewed and any clarifications sought* |
+| __30th November 2020__   | Outcomes communicated to applicants      |
+| __6th April 2021__       | Grants are now active and work can begin |
 
-<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+## Applying for support from the programme
+
+![Case for support template](images/skeleton.png){:style="float: right; width: 250px; height: 330px;"}
+
+We have put together a <a href="https://github.com/ukri-excalibur/ukri-excalibur.github.io/raw/master/docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx">skeleton case for support template</a> seting out the key information that should be included in a case for support, e.g.
+* Justification of resources
+* Linkage to other ExCALIBUR projects
+* Description and costs
+* Work packages
+* Milestones and outputs
+* Risk register
+
+A [Frequently Asked Questions](/faq) document is available which describes the ExCALIBUR H&ES open call process and provides guidance on scope and eligibility for projects. We have also produced a short video which walks you through what is required in an ExCALIBUR H&ES case for support:
+
+<iframe src="https://www.youtube.com/embed/KD0Yz2hKRi8" width="640" height="360" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Contact us
+
+To submit your case for support, or if you have any queries or require further information, please do get in touch with the Hardware & Enabling Software [programme office](mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry). We are happy to discuss and provide formative feedback on draft proposals before they are submitted. This email address is monitored by programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL).
+
+<a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry" class="button button--large">Get in touch</a>
 
 
 
