--- a/_pages/graphcore.html
+++ b/_pages/graphcore.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES</title>
-	<meta name="description" content="Testbed projects that the programme has supported">
+	<title>Graphcore testbed – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Testbed projects that the programme has supported">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="Graphcore testbed – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/gc20-ipu.png">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Testbed projects that the programme has supported" />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="Graphcore testbed – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/gc20-ipu.png" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/graphcore.html">
 
 
 	<header class="header">
@@ -126,18 +126,18 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="Graphcore testbed – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/gc20-ipu.png)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Testbeds</h1>
-		<p>Testbed projects that the programme has supported</p>
+		<h1>Graphcore testbed</h1>
+		<p>University of Bristol</p>
 
 	</div>
 
@@ -149,80 +149,22 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			This testbed will evaluate the [Graphcore IPU-M2000](https://www.graphcore.ai/) system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes on.
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+![Graphcore IPU-M2000](images/ipu-m2000.jpg){:style="float: right; width: 350px; height: 250px; padding: 15px;"}
 
-<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+The IPU (Intelligent Processing Unit) is a completely new kind of massively parallel processor, co-designed from the ground up to accelerate machine intelligence. Each MK2 GC200 IPU in the IPU-M2000 unit has 1472 processor cores, running nearly 9,000 independent parallel program threads with 900MB in processor memory and 250 TeraFlops of AI compute at FP16.16 and FP16.SR (stochastic rounding). The IPU-M2000 system has four IPUs, delivering approximately 1 PetaFlop of AI compute, and supporting ultra-low latency IPU-Fabric interconnect. 
 
-<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+The testbed includes four IPU-M2000 systems, which will enable the interconnect to be tested and characterised. The project will evaluate the Graphcore system’s intended use cases around AI training and interference, and also look at a subset of HPC codes that may be suitable for this platform.
 
-<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+The Graphcore system will also be made available to the ExCALIBUR and wider UK research community with support and a training programme from the Bristol team. It should be noted that codes will need to fit into small memories and must be single or half precision due to IPU requirements.
+
+
+## Access to the testbed systems
+
+The Excalibur H&ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.
+
+<a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a>
 
 
 
