--- a/_pages/hes.html
+++ b/_pages/hes.html
@@ -20,18 +20,18 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES</title>
-	<meta name="description" content="Testbed projects that the programme has supported">
+	<title>About ExCALIBUR H&ES – ExCALIBUR H&ES</title>
+	<meta name="description" content="Introducing the ExCALIBUR Hardware and Enabling Software programme">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Testbed projects that the programme has supported">
+	<meta name="twitter:title" content="About ExCALIBUR H&ES – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="Introducing the ExCALIBUR Hardware and Enabling Software programme">
 	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Testbed projects that the programme has supported" />
+	<meta property="og:title" content="About ExCALIBUR H&ES – ExCALIBUR H&ES" />
+	<meta property="og:description" content="Introducing the ExCALIBUR Hardware and Enabling Software programme" />
 	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
 
 	
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/hes.html">
 
 
 	<header class="header">
@@ -126,7 +126,7 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Testbeds – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="About ExCALIBUR H&ES – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
@@ -136,8 +136,8 @@
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Testbeds</h1>
-		<p>Testbed projects that the programme has supported</p>
+		<h1>About ExCALIBUR H&ES</h1>
+		<p>Introducing the ExCALIBUR Hardware and Enabling Software programme</p>
 
 	</div>
 
@@ -149,80 +149,44 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			## Rationale
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+* Designed to inform, and be informed by, the ExCALIBUR software projects across the whole remit (UKRI, Met Office and UKAEA)
+* Deliver proof of concept systems with future hardware relevant for the Exascale computing needs of the UKRI research community
+* Must interact with Public Sector, Industry and Commerce as real partners
+* The Exascale definitions we will use are activity based:
+    * Solving Problems that are a 10-1000x larger than we solve at present
+    * Solving Problems 10-1000x faster than at present 
+    * Problems can be simulation, data modelling and/or data driven
+    * Can come from all areas of Research and Innovation
+    * Exascale “Velocity” is just an important output as Exascale “Volume”
 
-<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+## Funding
 
-<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+* ExCALIBUR was awarded £4.5M in capital funding over 4.5 years to develop a hardware fore-sighting programme
+* Industry co-funding for the programme will be sought where possible
+* The £4.5m capital will provide testbed areas that use pre-commercial equipment for software prototyping and development to: 
+    * enable the software community to be ready to use commercial products effectively as soon as they come on to the market; 
+    * provide the UKRI community with the ability to influence the technology industry and the necessary knowledge to guide their purchase decisions
+* A core activity for H&ES is __Benchmarking for Exascale__
+* H&ES will also be encouraging true __Co-design__ activities
 
-<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+## Timeline
+
+| Financial year       | Budget | Type of call |                 
+|----------------------|-----------------------|
+| 2019-2020            | £0.5m  | Closed call  |
+| 2020-2021            | £1m    | Closed call  |
+| [__2021-2022__](funding)                | [__£1m__](funding)    | [__Open call__](funding)    |
+| 2022-2023            | £1m    | Open call    |
+| 2023-2024            | £1m    | Open call    |
+
+Closed calls are available to [STFC DiRAC](https://www.dirac.ac.uk) partner institutions and their collaborators only - DiRAC is supporting UKRI to implement the Hardware and Enabling Software programme.
+
+Submissions to the 2021-2022 [ExCALIBUR H&ES open call](funding) are currently being reviewed.
+
+<a href="funding" class="button button--large">ExCALIBUR H&ES open call</a>
+
 
 
 
