--- a/_pages/testbeds.html
+++ b/_pages/testbeds.html
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/testbeds">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/testbeds.html">
 
 
 	<header class="header">
@@ -149,80 +149,25 @@
 
 		<article class="single-post">
 
-			<p>A number of testbed systems are under development under the auspices of ExCALIBUR H&amp;ES:</p>
+			A number of testbed systems are under development under the auspices of ExCALIBUR H&ES:
 
-<table>
-  <thead>
-    <tr>
-      <th>University</th>
-      <th>Testbed project</th>
-      <th>What it will deliver</th>
-      <th>Industry partners</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Birmingham</td>
-      <td><a href="next-silicon">Novel hardware / software testbed</a></td>
-      <td>Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps</td>
-      <td>Next Silicon, Lenovo</td>
-    </tr>
-    <tr>
-      <td>Bristol</td>
-      <td><a href="graphcore">Graphcore testbed</a></td>
-      <td>Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes</td>
-      <td>Dell, Graphcore</td>
-    </tr>
-    <tr>
-      <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
-      <td>Dell, Intel</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="storage-and-ram">Storage and RAM as Services</a></td>
-      <td>First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies</td>
-      <td>AMD, Dell, Mellanox</td>
-    </tr>
-    <tr>
-      <td>Durham</td>
-      <td><a href="amd-gpu">AMD GPU testbed</a></td>
-      <td>Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community</td>
-      <td>AMD, Dell</td>
-    </tr>
-    <tr>
-      <td>Edinburgh</td>
-      <td><a href="cerebras">Cerebras testbed</a></td>
-      <td>First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components</td>
-      <td>Cerebras, HPE</td>
-    </tr>
-    <tr>
-      <td>Edinburgh, UCL and Warwick</td>
-      <td><a href="fpga">FPGA testbed</a></td>
-      <td>Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx.</td>
-      <td>Xilinx</td>
-    </tr>
-    <tr>
-      <td>Leicester</td>
-      <td><a href="arm-gpu">ARM+GPU testbed</a></td>
-      <td>Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community</td>
-      <td>ARM, HPE</td>
-    </tr>
-    <tr>
-      <td>UCL</td>
-      <td><a href="adaptable-cluster">Interconnect Testing and Developing: The UCL Adaptable Cluster</a></td>
-      <td>Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.</td>
-      <td>Mellanox</td>
-    </tr>
-  </tbody>
-</table>
+| University | Testbed project | What it will deliver | Industry partners |
+|-------------|-----------------|----------------------|--------------------
+| Birmingham  | [Novel hardware / software testbed](next-silicon) | Evaluate novel accelerator technology from Next Silicon and performance of the main codes used by UKRI researchers including HPC apps | Next Silicon, Lenovo |
+| Bristol     | [Graphcore testbed](graphcore) | Evaluate the Graphcore IPU-M2000 system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes | Dell, Graphcore |
+| Cambridge   | Exascale data testbed | Hardware and Software solutions | Dell, Intel |
+| Durham      | [Storage and RAM as Services](storage-and-ram) | First UK install of both BlueField-2 and Gen-Z for HPC. The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies | AMD, Dell, Mellanox |
+| Durham      | [AMD GPU testbed](amd-gpu) | Provide researchers with the opportunity to test their code on the AMD MI50 GPU as a resource for ExCALIBUR and the wider UK research community | AMD, Dell |
+| Edinburgh   | [Cerebras testbed](cerebras) | First wafer scale system installed in Europe. Will facilitate a deep level look at accelerator interaction with other processing units and components | Cerebras, HPE |
+| Edinburgh, UCL and Warwick | [FPGA testbed](fpga) | Will form an important UK resource for exploring the future role of FPGA technology in science, engineering, and the broader computational science communities, featuring next generation Versal Adaptive Compute Acceleration Platform (ACAP) technology from Xilinx. | Xilinx |
+| Leicester   | [ARM+GPU testbed](arm-gpu) | Ensure that ARM servers work harmoniously with accelerators – with any shortcomings understood, documented and reported to vendors. Provide an ARM+GPU testbed for ExCALIBUR and the wider UK research community | ARM, HPE |
+| UCL         | [Interconnect Testing and Developing: The UCL Adaptable Cluster](adaptable-cluster) | Measure the impacts of a variety of in-network technologies – doing computation at the switch level and accelerator off-load. Characterise breadth and depth of system and application performance. Provide ARM FORGE debugging, profiling and optimisation tools for key centres in the ExCALIBUR project.  | Mellanox |
 
-<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+## Access to the testbed systems
 
-<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+The Excalibur H&ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.
 
-<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+<a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a>
 
 
 
