404 page and updated sitemap

--- a/exascale-data.html
+++ b/exascale-data.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>Page Not Found – ExCALIBUR H&ES</title>
-	<meta name="description" content="Sorry – the page you're looking for doesn't exist.">
+	<title>Exascale Data Testbed – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Page Not Found – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Sorry – the page you're looking for doesn't exist.">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="Exascale Data Testbed – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/west-cambridge-dc1.png">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="Page Not Found – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Sorry – the page you're looking for doesn't exist." />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="Exascale Data Testbed – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/west-cambridge-dc1.png" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/404.html">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/exascale-data">
 
 
 	<header class="header">
@@ -126,25 +126,52 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="Page Not Found – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="Exascale Data Testbed – ExCALIBUR H&ES">
 
-			<section class="hero">
+			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/west-cambridge-dc1.png)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>Page not found.</h1>
-		<p class="hero__text editable">Sorry – the page you're looking for doesn't exist.</p>
-		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
-		<p><a href="/" class="button button--large">Back To Home</a></p>
+		<h1>Exascale Data Testbed</h1>
+		<p>University of Cambridge</p>
 
 	</div>
 
 </section>
 
+<section class="single">
+
+	<div class="wrap">
+
+		<article class="single-post">
+
+			<p><img src="images/intel-optane.png" alt="Intel Optane Data Centre Persistent Memory" style="float: right; width: 450px; height: 180px; padding: 15px;" /></p>
+
+<p>This testbed utilises world leading HPC systems development, deployment and operational skills housed within the Cambridge Research Computing Service to build a next generation high performance PCI-Gen-4 solid state I/O testbed utilising a range of file systems including Lustre, Intel DAOS, BeeGFS and HDF5 on state-of-the-art solid state storage hardware. The system utilises the latest Intel PCI Gen-4 NVMe drives and the new Intel PCI-Gen-4 Optane Data Centre Persistent Memory. The project will see the deployment in April 2021 of the UK’s fastest HPC storage testbed delivering over 500GB/s bandwidth and over 20 million IOPS of raw I/O performance which can be deployed across applications via a range of leading HPC file systems such as Lustre, Intel DAOS or BeeGFS as well as other more low level direct I/O protocols.</p>
+
+<p><img src="images/daos-stack.png" alt="DAOS Software Stack" style="float: right; width: 450px; height: 450px; padding: 15px;" /></p>
+
+<p>It is expected that the solution will also be one of the fastest HPC storage solutions in the world, being ranked high in the worldwide I/O 500 listing. Intel <a href="https://www.intel.co.uk/content/www/uk/en/high-performance-computing/daos-high-performance-storage-brief.html">DAOS</a> is of particular interest since it has been developed from the ground up to provide a persistent file system utilising both NVMe drives and Optane DCP memory. DAOS is still at proof of concept stage but is shown to deliver far higher performance than traditional parallel file systems. This project is supported directly by Intel in terms of hardware, staff effort and strong co-design work in collaboration with Intel engineers developing the DAOS file system. The system will represent Intel’s largest DAOS testbed.</p>
+
+<p>In addition to the I/O hardware and various file system technologies the testbed is configured with comprehensive system level telemetry monitoring capability provided by the UKRI funded <a href="https://www.openstack.org/use-cases/science/">Scientific OpenStack</a> middleware layer combined with a range of other more specialised application I/O profiling tools. The UK Scientific OpenStack is a world leading HPC middleware layer developed at Cambridge and funded by over 4 years investment from STFC, EPSRC and MRC. System I/O telemetry combined with application level I/O profiling is vital if we are to fully exploit emerging I/O and file system technologies by helping application developers understand how to implement the most efficient I/O mechanisms within the application code. Without such tools developers will be blind in terms of how to best utilise the new I/O platforms.</p>
+
+<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+
+<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+
+<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+
+
+
+		</article>
+
+	</div>
+
+</section>
 
 		</div>
 
