--- a/testbeds.html
+++ b/testbeds.html
@@ -175,8 +175,8 @@
     </tr>
     <tr>
       <td>Cambridge</td>
-      <td>Exascale data testbed</td>
-      <td>Hardware and Software solutions</td>
+      <td><a href="exascale-data">Exascale data testbed</a></td>
+      <td>This testbed utilises world leading HPC systems development, deployment and operational skills housed within the Cambridge Research Computing Service to build a next generation high performance PCI-Gen-4 solid state I/O testbed utilising a range of file systems including Lustre, Intel DAOS, BeeGFS and HDF5 on state-of-the-art solid state storage hardware</td>
       <td>Dell, Intel</td>
     </tr>
     <tr>
