--- a/404.html
+++ b/404.html
@@ -21,17 +21,17 @@
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
 	<title>Page Not Found – ExCALIBUR H&ES</title>
-	<meta name="description" content="Sorry – the page you're looking for doesn't exist.">
+	<meta name="description" content="Sorry – the page your looking for doesn't exist.">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Page Not Found – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Sorry – the page you're looking for doesn't exist.">
+	<meta name="twitter:description" content="Sorry – the page your looking for doesn't exist.">
 	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
 	<meta property="og:title" content="Page Not Found – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Sorry – the page you're looking for doesn't exist." />
+	<meta property="og:description" content="Sorry – the page your looking for doesn't exist." />
 	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
 
 	
@@ -137,7 +137,7 @@
 	<div class="wrap">
 
 		<h1>Page not found.</h1>
-		<p class="hero__text editable">Sorry – the page you're looking for doesn't exist.</p>
+		<p class="hero__text editable">Sorry – the page your looking for doesn't exist.</p>
 		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
 		<p><a href="/" class="button button--large">Back To Home</a></p>
 
