--- a/arm-gpu.html
+++ b/arm-gpu.html
@@ -154,7 +154,7 @@
 <p><img src="images/v100.jpg" alt="NVIDIA V100" style="float: right; width: 250px; height: 200px; padding: 15px;" /></p>
 
 <ul>
-  <li>ARM servers work harmoniously with accelerators (such GPUs)</li>
+  <li>ARM servers work harmoniously with accelerators (such as GPUs)</li>
   <li>Any shortcomings are understood, documented and reported to vendors</li>
   <li>ExCALIBUR and the wider UK research community has access to an ARM-GPU testbed</li>
 </ul>
